force-app/main/default/objects/Office_Play_config__c/Office_Play_config__c.object-meta.xml
<CustomObject>
    <label>Office Play Config</label>
    <nameField>
        <label>Office Play Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Play Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>