force-app/main/default/objects/Office_Play_config__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <description>Select world map</description>
    <label>Map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>classic</fullName>
                <default>true</default>
                <label>classic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>