force-app/main/default/objects/Office_Play_config__c/fields/map_image__c.field-meta.xml
<CustomField>
    <fullName>map_image__c</fullName>
    <formula
  >IF(  TEXT( Map__c ) = &apos;classic&apos;  , IMAGE(&apos;/resource/remoteOfficeAssets/assets/images/ui/gameTile_classic.jpg&apos;, &apos;Classic Map&apos; , 150, 150) , IMAGE(&apos;/resource/remoteOfficeAssets/assets/images/ui/gameTile_classic.jpg&apos;,&apos;Classic Map&apos;, 150, 150) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>map image</label>
    <type>Text</type>
</CustomField>