force-app/main/default/objects/Office_Play_config__c/fields/Player_Limit__c.field-meta.xml
<CustomField>
    <fullName>Player_Limit__c</fullName>
    <label>Player Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>