force-app/main/default/objects/Office_Play_config__c/fields/Selected_Map__c.field-meta.xml
<CustomField>
    <fullName>Selected_Map__c</fullName>
    <formula>IMAGE( map_image__c ,&apos;Map Image&apos; , 190, 230)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Map</label>
    <type>Text</type>
</CustomField>